--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore node_modules created by linters
+/node_modules/*
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
